# odb

./: .gitignore  README.md  c_386.go  c_amd64.go  example_test.go  go.mod  o.go
odbtp/: .cvsignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  README.64bitOS  README.broadlux  aclocal.m4  config.h  configure  configure.in  dllodbtp.dsw  dllodbtpcli.dsp  libodbtp.dsp  libodbtp.la  odbtp.c  odbtp.h  odbtpcli.con  odbtpcli.dsp  sockutil.c  sockutil.h
odbtp/.libs/: libodbtp.lai  libodbtp.so.1  libodbtp.so.1.0.1  odbtpcli
odbtp/docs/: addemp_php.html  clilib.html  examples.html  features.html  index.html  install.html  main.css  odbtpcli_c.html  pearqry_php.html  phpext-index.html  phpext.html  protocol-index.html  query_php.html  scroller_php.html  servconf.html  sqltables_php.html  storedqry_php.html  timetable.html  twotimes_c.html  version1_1.html  version1_1_1.html
odbtp/examples/: initints.c  mssql.conf  odbtp.conf  old_odbtpcli.c  twotimes.c
odbtp/php/bin_netware/php-5.0.x/: php_odbtp.nlm  php_odbtp_mssql.nlm  readme_odbtp_ext.txt
odbtp/php/bin_win32/php-5.0.x/: readme_odbtp_ext.txt
odbtp/php/bin_win32/php-5.1.x/: readme_odbtp_ext.txt
odbtp/php/examples/: connect.php  echoguid.sql  init.php  initints.sql  insertints.htm  pearqry.htm  pearqry.php  query.htm  query.php  rollback.php  scroller.htm  sqltables.php  theints.sql
odbtp/php/examples/timetable/: close.php  common.php  insert.php  list.php
odbtp/php/ext/: Makefile
odbtp/php/ext/odbtp/: CREDITS  config.m4  config.w32  (+5 more)
odbtp/winclient/: libodbtp.lib  odbtp.lib
odbtp/winservice/: .cvsignore
(+3 files in other folders)
