dnl $Id: configure.in,v 1.4 2004/10/20 23:04:03 rtwitty Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(odbtp.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(odbtp, 1.1.3)
AM_MAINTAINER_MODE()

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_FUNC(gethostent, , AC_CHECK_LIB(nsl, gethostent))
AC_CHECK_FUNC(setsockopt, , AC_CHECK_LIB(socket, setsockopt))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h string.h unistd.h)
AC_CHECK_HEADERS(arpa/inet.h fcntl.h netdb.h netinet/in.h sys/socket.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(malloc mktime realloc memset strcasecmp strncasecmp)
AC_CHECK_FUNCS(gethostbyaddr gethostbyname inet_ntoa select socket)

AC_OUTPUT(Makefile)
